# MVR_K1_UI

./: CMakeLists.txt  MVR_K1_UI.pro  README.md  drawing.cpp  drawing.h  maintask.cpp  maintask.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  testtask.cpp  testtask.h
include/: drawing.cpp  drawing.h  maintask.cpp  maintask.h  mainwindow.cpp  mainwindow.h  testtask.cpp  testtask.h
